--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,29 +1,32 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: Pipeline Java in EC2 - Prática Devops
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '17' ]
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK ${{matrix.java}}
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: ${{matrix.java}}
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
-      - name: Build with Maven Wrapper
-        run: ./mvnw -B package
+      - name: Compilar por MAVEN
+        run: mvn -B package --file pom.xml -DskipTests #usado para skipar as variaveis de ambiente
+
+      - name: Deploy na EC2
+        run: |
+          echo "${{secrets.KEY_SSH_EC2}}" > private_key && chmod 400 private_key
+          ssh -o StrictHostKeyChecking=no -i "private_key" ubuntu@ec2-34-225-230-10.compute-1.amazonaws.com "
+            cd /home/ubuntu/POC && 
+            git pull origin main &&
+            mvn clean package -DskipTests &&
+            ./executar.sh "
